Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjBoolean.quorum
class Main
    action Main
        Integer v
        v:SetValue(Test())
    end

    action Test() returns Integer
        boolean var = true
        return var
    end
end